# AstraS_Viewer

./: CMakeLists.txt  README.md
src/: main.cpp
src/common/: window.hpp
src/net/: udpreceiver.cpp  udpreceiver.hpp  udpsender.cpp  udpsender.hpp
